# only-connect-data-scrapper

./: Cargo.toml  README.md
data/game_data/: S10_E10_Wandering_Minstrels_v_Chessmen.json  S10_E14_Linguists_v_Gallifreyans.json  S10_E17_Chessmen_v_Felinophiles.json  S10_E19_Bibliophiles_v_Gamesmasters.json  S10_E20_QI_Elves_v_Coders.json  S10_E23_Nordiphiles_v_QI_Elves.json  S10_E27_Orienteers_v_Chessmen.json  S10_E8_Nordiphiles_v_Nightwatchmen.json  S10_E9_Politicos_v_Oxonians.json  S11_E10_Collectors_v_Mixologists.json  S11_E11_Headliners_v_Bookworms.json  S11_E12_Road_Trippers_v_Builders.json  S11_E15_Wayfarers_v_String_Section.json  S11_E17_Cluesmiths_v_Mixologists.json  S11_E19_Wayfarers_v_Builders.json  S11_E23_Cluesmiths_v_Railwaymen.json  S11_E2_Polyglots_v_Yorkers.json  S11_E3_Spaghetti_Westerners_v_Mixologists.json  S11_E5_Wayfarers_v_Bookworms.json  S11_E6_String_Section_v_Headliners.json  S11_E7_Road_Trippers_v_Athenians.json  S11_E8_Scientists_v_Builders.json  S12_E13_Maltsters_v_Policy_Wonks.json  S12_E15_Maltsters_v_Oscar_Men.json  S12_E16_Wrestlers_v_Genealogists.json  S12_E17_Cosmopolitans_v_Tubers.json  S12_E18_Networkers_v_Psmiths.json  S12_E19_Shutterbugs_v_Korfballers.json  S12_E20_Verbivores_v_Taverners.json  S12_E24_Genealogists_v_Oscar_Men.json  S12_E3_Psmiths_v_Verbivores.json  S12_E4_Networkers_v_Cousins.json  S12_E5_Shutterbugs_v_Highgates.json  S12_E6_Korfballers_v_Channel_Islanders.json  S12_E7_Bardophiles_v_Taverners.json  S12_E9_Fire-Eaters_vs_Eurovisionaries.json  (+77 more)
src/: data.rs  main.rs  structures.rs  utilities.rs
(+94 files in other folders)
