[package]
name = "only_connect_data_scrapper"
version = "0.1.0"
authors = ["HTellez <hatellezp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
select = "*"
scraper = "*"
regex = "*"